--- a/algebra/crt.html
+++ b/algebra/crt.html
@@ -77,7 +77,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html" class="active"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Prime Factorization</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="../numerical/isqrt.html"><strong aria-hidden="true">6.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/intro.html"><strong aria-hidden="true">7.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../numerical/linrec/berlekamp.html"><strong aria-hidden="true">7.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/kitamasa.html"><strong aria-hidden="true">7.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/bostanmori.html"><strong aria-hidden="true">7.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/matrix.html"><strong aria-hidden="true">8.</strong> Fast n-dimensional Array</a></li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">9.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">10.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">10.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">10.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">10.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/adjlist.html"><strong aria-hidden="true">11.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../graphs/dsu.html"><strong aria-hidden="true">12.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">13.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">14.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">15.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">16.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">17.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">18.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">19.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">20.</strong> Mo's</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/psbase.html"><strong aria-hidden="true">21.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">22.</strong> Zero/One Trait</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">23.</strong> Macros</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html" class="active"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="../numerical/isqrt.html"><strong aria-hidden="true">6.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/intro.html"><strong aria-hidden="true">7.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../numerical/linrec/berlekamp.html"><strong aria-hidden="true">7.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/kitamasa.html"><strong aria-hidden="true">7.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/bostanmori.html"><strong aria-hidden="true">7.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/matrix.html"><strong aria-hidden="true">8.</strong> Fast n-dimensional Array</a></li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">9.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">10.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">10.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">10.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">10.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/adjlist.html"><strong aria-hidden="true">11.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../graphs/dsu.html"><strong aria-hidden="true">12.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">13.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">14.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">15.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">16.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">17.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">18.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">19.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">20.</strong> Mo's</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/psbase.html"><strong aria-hidden="true">21.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">22.</strong> Zero/One Trait</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">23.</strong> Macros</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -140,36 +140,79 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="chinese-remainder-theorem"><a class="header" href="#chinese-remainder-theorem">Chinese Remainder Theorem</a></h1>
-<p>Reference: PyRival <a href="https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py">https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py</a></p>
-<p>Returns \(x\) such that \(x = r_i \mod m_i\) for all \(i\). </p>
-<p>Required snippets: <a href="gcd.html#gcd">GCD</a>, <a href="extgcd.html#extended-euclid-algorithm">Extended Euclidean Algorithm</a></p>
+<p><code>crt(r, m)</code> returns \(x\) such that \(x \equiv r_i \pmod {m_i}\) for all \(i\).</p>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
+</span>let r: Vec&lt;i64&gt; = vec![1, 2, 3];
+let m: Vec&lt;i64&gt; = vec![3, 5, 7];
+let x = crt(&amp;r, &amp;m);
+println!(&quot;{:?}&quot;, x); // Some(52)
+
+let r: Vec&lt;i64&gt; = vec![2, 5];
+let m: Vec&lt;i64&gt; = vec![10, 25];
+let x = crt(&amp;r, &amp;m);
+println!(&quot;{:?}&quot;, x); // None
+<span class="boring">}
+</span><span class="boring">
+</span><span class="boring">// Chinese remainder theorem
+</span><span class="boring">// Reference: PyRival &lt;https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py&gt;
+</span><span class="boring">
+</span><span class="boring">fn gcd(x: i64, y: i64) -&gt; i64 {
+</span><span class="boring">    if y == 0 {
+</span><span class="boring">        x
+</span><span class="boring">    } else {
+</span><span class="boring">        gcd(y, x % y)
+</span><span class="boring">    }
+</span><span class="boring">}
+</span><span class="boring">
+</span><span class="boring">/// Returns gcd(a, b), s, r s.t. a*s + b*r = gcd(a, b)
+</span><span class="boring">#[inline(always)]
+</span><span class="boring">fn ext_gcd(a: i64, b: i64) -&gt; (i64, i64, i64) {
+</span><span class="boring">    let (mut s, mut old_s) = (0, 1);
+</span><span class="boring">    let (mut r, mut old_r) = (b, a);
+</span><span class="boring">    while r != 0 {
+</span><span class="boring">        let q = old_r / r;
+</span><span class="boring">        let (new_r, new_s) = (old_r - q * r, old_s - q * s);
+</span><span class="boring">        old_r = r; // Not using destructuring to support low version
+</span><span class="boring">        r = new_r; // AtCoder is using 1.42.0
+</span><span class="boring">        old_s = s;
+</span><span class="boring">        s = new_s;
+</span><span class="boring">    }
+</span><span class="boring">
+</span><span class="boring">    (
+</span><span class="boring">        old_r,
+</span><span class="boring">        old_s,
+</span><span class="boring">        if b != 0 { (old_r - old_s * a) / b } else { 0 },
+</span><span class="boring">    )
+</span><span class="boring">}
+</span><span class="boring">
+</span><span class="boring">/// Returns $x$ s.t. $x=r_i (mod m_i)$ for all $i$
+</span><span class="boring">fn crt(r: &amp;[i64], m: &amp;[i64]) -&gt; Option&lt;i64&gt; {
+</span><span class="boring">    let (mut x, mut m_prod) = (0, 1);
+</span><span class="boring">    for (bi, mi) in r.iter().zip(m.iter()) {
+</span><span class="boring">        let (g, s, _) = ext_gcd(m_prod, *mi);
+</span><span class="boring">        if ((bi - x) % mi).rem_euclid(g) != 0 {
+</span><span class="boring">            return None;
+</span><span class="boring">        }
+</span><span class="boring">        x += m_prod * ((s * ((bi - x).rem_euclid(*mi))).div_euclid(g));
+</span><span class="boring">        m_prod = (m_prod * mi).div_euclid(gcd(m_prod, *mi));
+</span><span class="boring">    }
+</span><span class="boring">    Some(x.rem_euclid(m_prod))
+</span><span class="boring">}
+</span></code></pre></pre>
+<h2 id="code"><a class="header" href="#code">Code</a></h2>
 <pre><code class="language-rust noplayground">// Chinese remainder theorem
-//
-// Reference: PyRival &lt;https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py&gt;
+// Reference: PyRival https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py
 
-#[inline(always)]
-fn safe_mod(mut x: i64, m: i64) -&gt; i64 {
-    x %= m;
-    if x &lt; 0 {
-        x + m
-    } else {
+fn gcd(x: i64, y: i64) -&gt; i64 {
+    if y == 0 {
         x
+    } else {
+        gcd(y, x % y)
     }
 }
 
-/// Returns the greatest common divisor of a and b
-/// Using loop based impl for inlining
-#[inline(always)]
-fn gcd(mut a: i64, mut b: i64) -&gt; i64 {
-    while b != 0 {
-        let t = b;
-        b = a % b;
-        a = t;
-    }
-    a
-}
-
-/// Returns gcd(a, b), s, r s.t. a*s + b*r = gcd(a, b)
+/// Returns gcd(a, b), s, t s.t. a*s + b*t = gcd(a, b)
 #[inline(always)]
 fn ext_gcd(a: i64, b: i64) -&gt; (i64, i64, i64) {
     let (mut s, mut old_s) = (0, 1);
@@ -190,18 +233,18 @@ fn ext_gcd(a: i64, b: i64) -&gt; (i64, i64, i64) {
     )
 }
 
-/// Returns $x$ s.t. $x=r_i (mod m_i)$ for all $i$
+/// Returns x s.t. x=r_i (mod m_i) for all i
 fn crt(r: &amp;[i64], m: &amp;[i64]) -&gt; Option&lt;i64&gt; {
     let (mut x, mut m_prod) = (0, 1);
     for (bi, mi) in r.iter().zip(m.iter()) {
         let (g, s, _) = ext_gcd(m_prod, *mi);
-        if safe_mod((bi - x) % mi, g) != 0 {
+        if ((bi - x) % mi).rem_euclid(g) != 0 {
             return None;
         }
-        x += m_prod * (s * safe_mod(bi - x, *mi) / g);
-        m_prod = (m_prod * mi) / gcd(m_prod, *mi);
+        x += m_prod * ((s * ((bi - x).rem_euclid(*mi))).div_euclid(g));
+        m_prod = (m_prod * mi).div_euclid(gcd(m_prod, *mi));
     }
-    Some(safe_mod(x, m_prod))
+    Some(x.rem_euclid(m_prod))
 }
 </code></pre>
 
